--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,18 @@ body {
 }
 
 .results-container{
-    border: 2px solid black;
+    border: 2px solid green;
     border-radius: 5px;
     padding: 20px;
     margin-bottom: 20px;
     display: flex;
-    flex-direction: row-reverse;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.result {
+    font-size: 40px;
 }
 
 .key-container{
@@ -36,6 +42,7 @@ body {
     justify-content: space-between;
     gap: 10px;
     flex-wrap: wrap;
+    user-select: none;
 }
 
 .key{
