--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,12 @@
     padding: 0;
 }
 
+html{
+    background-image: linear-gradient(135deg, #00376A 0%, #0079E9 100%);
+}
+
 html, 
 body {
-    background-color: #e8e8e8;
     height: 100%;
     font-family: 'Klee One', cursive;
     display: flex;
@@ -15,14 +18,19 @@ body {
 }
 
 .calculator{
-    border: 2px solid black;
-    border-radius: 5px;
-    padding: 20px;
+    height: 800px;
+    width: 423px;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    border-radius: 40px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    background-image: linear-gradient(135deg, #373737 0%, #252628 22.90%, #000309 100%);
 }
 
 .results-container{
-    border: 2px solid green;
+    align-self: center;
+    width: 350px;
     border-radius: 5px;
     padding: 20px;
     margin-bottom: 20px;
@@ -32,34 +40,40 @@ body {
     align-items: flex-end;
 }
 
+.feedback{
+    color: white;
+}
+
 .result {
     font-size: 40px;
+    color: white;
 }
 
 .key-container{
-    width: 355px;
+    width: 423px;
+    height: 537px;
+    flex-shrink: 0;
+    border-radius: 40px;
+    background-image: linear-gradient(72deg, #091C4A 0%, #1a4d7d 100%, #091C4A 0%);
+    box-shadow: 0px -5px 70px 0px rgba(0, 0, 0, 0.10);
     display: flex;
     justify-content: space-between;
-    gap: 10px;
     flex-wrap: wrap;
     user-select: none;
 }
 
 .key{
     height: 70px;
-    width: 80px;
+    width: 70px;
     font-size: 20px;
-    padding: 20px;
-    border: 2px solid black;
-    border-radius: 5px;
+    font-weight: 600;
+    color: white;
+    background-color: rgba(5, 5, 5, 0.30);
+    
+    border-radius: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
     cursor: pointer;
     user-select: none;
-}
-
-.delete,
-.clear{
-    width: 170px;
 }
